# GoLDE

./: .clang-format  .gitattributes  .gitignore  =500  CMakeLists.txt  CMakeSettings.json  GameOfLife.sln  README.md
.github/workflows/: Format.yml  build.yml  test.yml  (+1 more)
Dependencies/: CMakeLists.txt
Dependencies/GLEW/glew-2.1.0/lib/Release/linux/x64/: glew32s.lib
Dependencies/GLFW/lib/Release/linux/x64/: glfw3.lib
Dependencies/GLM/glm/gtx/: dual_quaternion.inl
Dependencies/GoogleTest/: CMakeLists.txt
Dependencies/ImGUI/: CMakeLists.txt
Dependencies/ImGUI/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
Dependencies/NFD/lib/Release/linux/x64/: nfd.lib
Dependencies/NFD/lib/Release/windows/x64/: nfd.lib
Dependencies/NFD/lib/Release/windows/x86/: nfd.lib
GOLAlgoLib/: CMakeLists.txt  GOLAlgoLib.vcxproj  GOLAlgoLib.vcxproj.filters
GOLAlgoLib/include/: BigInt.hpp  BigUInt.hpp  GameGrid.h  GameGrid.hpp  Graphics2D.hpp  HashLife.hpp  HashQuadtree.h  HashQuadtree.hpp  LifeAlgorithm.h  LifeAlgorithm.hpp  LifeHashSet.h  LifeHashSet.hpp  LifeNode.hpp  LifeRule.hpp  Plane.hpp  Topology.hpp  Torus.hpp  UnboundedTopology.hpp
GOLAlgoLib/src/: BigUInt.cpp  GameGrid.cpp  GameGrid.h  HashLife.cpp  HashQuadtree.cpp  HashQuadtree.h  HashQuadtreeIterator.cpp  LifeAlgorithm.h  LifeHashSet.cpp  LifeHashSet.h  LifeNode.cpp  Plane.cpp  SparseLife.cpp  Topology.cpp  Torus.cpp  UnboundedTopology.cpp
GOLCoreLib/: CMakeLists.txt  imgui.ini
GOLCoreLib/include/: EditorModel.hpp  Game.h  Game.hpp  PresetSelection.h  PresetSelection.hpp  SimulationControl.h  SimulationControl.hpp  SimulationEditor.h  SimulationEditor.hpp  SimulationWorker.h  SimulationWorker.hpp
GOLCoreLib/src/: EditorModel.cpp  Game.cpp  PresetSelection.cpp  PresetSelection.h  SimulationControl.cpp  SimulationEditor.cpp  SimulationEditor.h  SimulationWorker.cpp
GOLExecutable/: Application.cpp  CMakeLists.txt
GOLExecutable/config/: shortcuts.yml  style.yaml  style.yml
GOLExecutable/presets/: glider.rle  logo.gol  logo.rle  metapixel_off.gol  metapixel_off.rle  metapixel_on.gol  metapixel_on.rle  turing_machine.gol  turing_machine.rle
GOLExecutable/presets/breeders/: glider_synthesizer.rle  metacatacryst.gol  simkin_glider_gun.rle  stabilized_switch_engine.gol  stabilized_switch_engine.rle
GOLExecutable/presets/spaceships/: 119P4H1V0.gol  119P4H1V0.rle  cordership.rle  spaceship1.gol  spaceship1.rle  spaceship2.gol  spaceship2.rle  spaceship3.rle
GOLExecutable/resources/shader/: grid.shader
GOLExecutable/templates/: 1-2-3-4.gol  1-2-3.gol  glider_gun.gol  glider_synthesizer.gol  mwss-to-g-converter.gol  simkin_glider_gun.gol  stabilized_switch_engine.gol  sun_blinker.gol
GOLGraphicsLib/: CMakeLists.txt  GOLGraphicsLib.vcxproj  GOLGraphicsLib.vcxproj.filters
GOLGraphicsLib/include/: Camera.h  Camera.hpp  GLBuffer.h  GLBuffer.hpp  GLException.h  GLException.hpp  Graphics2D.h  Graphics2D.hpp  GraphicsHandler.h  GraphicsHandler.hpp  ShaderManager.h  ShaderManager.hpp
GOLGraphicsLib/src/: Camera.cpp  Camera.h  GLBuffer.h  GLException.h  Graphics2D.h  GraphicsHandler.cpp  GraphicsHandler.h  ShaderManager.cpp  ShaderManager.h
GOLGuiLib/: CMakeLists.txt  GOLGuiLib.vcxproj  GOLGuiLib.vcxproj.filters
GOLGuiLib/include/: EditorResult.h  EditorResult.hpp  GameEnums.h  GameEnums.hpp  InputString.h  InputString.hpp  KeyShortcut.h  KeyShortcut.hpp  PresetSelectionResult.h  PresetSelectionResult.hpp  SelectionManager.h  SelectionManager.hpp  SimulationCommand.hpp  SimulationControlResult.h  SimulationControlResult.hpp  SimulationSettings.hpp  VersionManager.h  VersionManager.hpp  WidgetResult.hpp
GOLGuiLib/include/dialogs/: ErrorWindow.h  ErrorWindow.hpp  FileDialog.h  FileDialog.hpp  PopupWindow.h  PopupWindow.hpp  WarnWindow.h  WarnWindow.hpp
GOLGuiLib/include/misc/: ConfigLoader.h  ConfigLoader.hpp  DisabledScope.hpp  FileFormatHandler.hpp  LoadingSpinner.h  LoadingSpinner.hpp  RLEEncoder.h  RLEEncoder.hpp
GOLGuiLib/include/widgets/: ActionButton.h  ActionButton.hpp  CameraPositionWidget.hpp  DelayWidget.h  DelayWidget.hpp  EditorWidget.h  EditorWidget.hpp  ExecutionWidget.h  ExecutionWidget.hpp  FileWidget.h  FileWidget.hpp  NoiseWidget.h  NoiseWidget.hpp  ResizeWidget.h  ResizeWidget.hpp  RuleWidget.hpp  SelectionBoundsWidget.hpp  StepWidget.h  StepWidget.hpp  Widget.h  Widget.hpp
GOLGuiLib/src/: EditorResult.h  GameEnums.cpp  InputString.cpp  KeyShortcut.cpp  KeyShortcut.h  PresetSelectionResult.h  SelectionManager.cpp  VersionManager.cpp
GOLGuiLib/src/dialogs/: ErrorWindow.cpp  ErrorWindow.h  FileDialog.cpp  PopupWindow.cpp  PopupWindow.h  WarnWindow.cpp
GOLGuiLib/src/misc/: DisabledScope.cpp  FileFormatHandler.cpp  LoadingSpinner.cpp  RLEEncoder.cpp
GOLGuiLib/src/widgets/: ActionButton.h  CameraPositionWidget.cpp  DelayWidget.cpp  EditorWidget.cpp  ExecutionWidget.cpp  ExecutionWidget.h  FileWidget.cpp  FileWidget.h  NoiseWidget.cpp  ResizeWidget.cpp  RuleWidget.cpp  SelectionBoundsWidget.cpp  StepWidget.cpp  StepWidget.h  Widget.h
GOLLoggingLib/: CMakeLists.txt  GOLLoggingLib.vcxproj
GOLLoggingLib/include/: Logging.h  Logging.hpp
GOLLoggingLib/src/: Logging.cpp
GOLRunner/: Application.cpp  GOLRunner.vcxproj  GOLRunner.vcxproj.filters
GOLTest/: CMakeLists.txt  Testing.cpp
GOLTest/src/: BigUIntTest.cpp  DummyAlgorithmTest.cpp  EncodeTest.cpp  HashQuadtreeTest.cpp  LifeRuleTest.cpp  PatternRegressionTest.cpp  SparseLifeTest.cpp  TestMain.cpp  ThreadingTest.cpp  TopologyTest.cpp
GOLTest/universes/: bigsquiggles1.gol  bigsquiggles1.rle  bigsquiggles1024.gol  bigsquiggles1024.rle  bigsquiggles256.gol  blinker.rle  glider_gun.gol  rect1.gol  rect1.rle  rect4.gol  rect4.rle  squiggles1.gol  squiggles1.rle  squiggles2.gol  squiggles2.rle  squiggles3.gol  squiggles3.rle  squiggles4.gol  squiggles4.rle  squiggles64.gol  squiggles64.rle  tt.rle  weird1.gol  weird64.gol
GameOfLife/: GameOfLife.vcxproj  GameOfLife.vcxproj.filters  imgui.ini
cmake/: ClangFormat.cmake  CompilerOptions.cmake  RunFormat.cmake
(+104 files in other folders)
