set(SOURCES
    src/GameGrid.cpp
    src/HashLife.cpp
    src/HashQuadtree.cpp
    src/HashQuadtreeIterator.cpp
    src/LifeNode.cpp
    src/LifeHashSet.cpp
    src/Plane.cpp
    src/Topology.cpp
    src/Torus.cpp
)
set(HEADERS
    include/GameGrid.hpp
    include/Graphics2D.hpp
    include/HashLife.hpp
    include/HashQuadtree.hpp
    include/LifeAlgorithm.hpp
    include/LifeDataStructure.hpp
    include/LifeHashSet.hpp
    include/LifeRule.hpp
    include/Plane.hpp
    include/Topology.hpp
    include/Torus.hpp
)
add_library(GOLAlgoLib STATIC ${SOURCES} ${HEADERS})
target_include_directories(GOLAlgoLib
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${boost_config_SOURCE_DIR}/include
        ${boost_multiprecision_SOURCE_DIR}/include
)
target_link_libraries(GOLAlgoLib
    PRIVATE
        gol_compiler_options
    PUBLIC
        unordered_dense
        GOLLoggingLib
        GOLGraphicsLib
)