set(SOURCES
    src/dialogs/ErrorWindow.cpp
    src/dialogs/FileDialog.cpp
    src/dialogs/PopupWindow.cpp
    src/dialogs/WarnWindow.cpp
    src/misc/LoadingSpinner.cpp
    src/misc/RLEEncoder.cpp
    src/widgets/DelayWidget.cpp
    src/widgets/EditorWidget.cpp
    src/widgets/ExecutionWidget.cpp
    src/widgets/FileWidget.cpp
    src/widgets/NoiseWidget.cpp
    src/widgets/ResizeWidget.cpp
    src/widgets/SelectionBoundsWidget.cpp
    src/widgets/StepWidget.cpp
    src/GameEnums.cpp
    src/KeyShortcut.cpp
    src/SelectionManager.cpp
    src/VersionManager.cpp
)

set(HEADERS
    include/dialogs/ErrorWindow.hpp
    include/dialogs/FileDialog.hpp
    include/dialogs/PopupWindow.hpp
    include/dialogs/WarnWindow.hpp
    include/misc/ConfigLoader.hpp
    include/misc/LoadingSpinner.hpp
    include/misc/RLEEncoder.hpp
    include/widgets/ActionButton.hpp
    include/widgets/DelayWidget.hpp
    include/widgets/EditorWidget.hpp
    include/widgets/ExecutionWidget.hpp
    include/widgets/FileWidget.hpp
    include/widgets/NoiseWidget.hpp
    include/widgets/ResizeWidget.hpp
    include/widgets/SelectionBoundsWidget.hpp
    include/widgets/StepWidget.hpp
    include/widgets/Widget.hpp
    include/EditorResult.hpp
    include/GameEnums.hpp
    include/KeyShortcut.hpp
    include/PresetSelectionResult.hpp
    include/SelectionManager.hpp
    include/SimulationCommand.hpp
    include/SimulationControlResult.hpp
    include/SimulationSettings.hpp
    include/VersionManager.hpp
    include/WidgetResult.hpp
)

add_library(GOLGuiLib STATIC ${SOURCES} ${HEADERS})

target_include_directories(GOLGuiLib
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/include/dialogs
        ${CMAKE_CURRENT_SOURCE_DIR}/include/widgets
        ${CMAKE_CURRENT_SOURCE_DIR}/include/misc
)

target_link_libraries(GOLGuiLib
    PRIVATE
        gol_compiler_options
    PUBLIC
        imgui_lib
        nfd
        fontawesome
        GOLAlgoLib
        GOLGraphicsLib
        GOLLoggingLib
)